[gd_scene load_steps=13 format=3 uid="uid://o3qecy7acecy"]

[ext_resource type="Script" uid="uid://cb6i5jgwo1n37" path="res://tür.gd" id="1_w25qd"]
[ext_resource type="Texture2D" uid="uid://rublssx2a1rl" path="res://Assets/3 Objects/door/door.png" id="2_tga12"]
[ext_resource type="Texture2D" uid="uid://dwiqo2g1jcrib" path="res://Assets/3 Objects/Lock/Sprites/Small Sturdy Padlock - GOLD - 0000.png" id="3_k3gtk"]
[ext_resource type="Script" uid="uid://fyrh8pacddpj" path="res://tür_offen_sprite.gd" id="3_w25qd"]
[ext_resource type="Texture2D" uid="uid://6chh8g0uqpfc" path="res://Assets/3 Objects/Lock/Sprites/Small Sturdy Padlock - GOLD - 0001.png" id="4_w25qd"]
[ext_resource type="Texture2D" uid="uid://c77ycibk3sqs2" path="res://Assets/3 Objects/Lock/Sprites/Small Sturdy Padlock - GOLD - 0002.png" id="5_wwjim"]
[ext_resource type="Texture2D" uid="uid://kxadod1kiew" path="res://Assets/3 Objects/Lock/Sprites/Small Sturdy Padlock - GOLD - 0003.png" id="6_m04sa"]
[ext_resource type="Texture2D" uid="uid://dft8uvnnsakjt" path="res://Assets/3 Objects/Lock/Sprites/Small Sturdy Padlock - GOLD - 0004.png" id="7_72srm"]
[ext_resource type="Texture2D" uid="uid://ckthiflgeegow" path="res://Assets/3 Objects/Lock/Sprites/Small Sturdy Padlock - GOLD - 0005.png" id="8_slpxl"]
[ext_resource type="Texture2D" uid="uid://crwslrxfpvtt7" path="res://Assets/3 Objects/Lock/Sprites/Small Sturdy Padlock - GOLD - 0006.png" id="9_xhe1u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5n6l"]
size = Vector2(12, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8oowp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_k3gtk")
}, {
"duration": 1.0,
"texture": ExtResource("4_w25qd")
}, {
"duration": 1.0,
"texture": ExtResource("5_wwjim")
}, {
"duration": 1.0,
"texture": ExtResource("6_m04sa")
}, {
"duration": 1.0,
"texture": ExtResource("7_72srm")
}, {
"duration": 1.0,
"texture": ExtResource("8_slpxl")
}, {
"duration": 1.0,
"texture": ExtResource("9_xhe1u")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Tür" type="Area2D"]
script = ExtResource("1_w25qd")

[node name="TürBlocker" type="StaticBody2D" parent="."]

[node name="BlockKollision" type="CollisionShape2D" parent="TürBlocker"]
position = Vector2(-179.5, 174)
shape = SubResource("RectangleShape2D_i5n6l")

[node name="TürKollision" type="CollisionShape2D" parent="."]
position = Vector2(-180, 174)
shape = SubResource("RectangleShape2D_i5n6l")

[node name="TürSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(-179.5, 174)
scale = Vector2(0.1025, 0.13)
texture = ExtResource("2_tga12")
region_enabled = true
region_rect = Rect2(132, 86, 90, 245)

[node name="TürOffenSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture_repeat = 2
position = Vector2(-188, 174)
scale = Vector2(0.1025, 0.13)
texture = ExtResource("2_tga12")
region_enabled = true
region_rect = Rect2(132, 86, 90, 245)
script = ExtResource("3_w25qd")

[node name="SchlossSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 3
position = Vector2(-183, 177)
scale = Vector2(0.3125, 0.318182)
sprite_frames = SubResource("SpriteFrames_8oowp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
